<resources>
    <string name="app_name">Cloud Places</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to register -->
    <string name="register_name">Name</string>
    <string name="register_repeat_password">Repeat Password</string>
    <string name="register_confirm">Confirm</string>
    <string name="register_photo">Photo:</string>

    <!-- Strings related to errors -->
    <string name="error_invalid_email">This email address is invalid. Provide a valid ua email.</string>
    <string name="error_invalid_password">This password is too short.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_different_password">Passwords must be equal</string>

    <!-- Nav -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu -->
    <string name="main_menu_app">App</string>
    <string name="main_menu_log_out">Log Out</string>
    <string name="main_menu_settings">Settings</string>

    <!-- Welcome -->
    <string name="title_activity_welcome">Cloud Places</string>

    <!-- Accommodations -->
    <string name="title_accommodations">Accommodations</string>
    <string name="main_menu_accommodations">Accommodations</string>
    <string name="main_menu_all_accommodations">All accommodations</string>

    <!-- Settings -->
    <string name="title_settings">Settings</string>
    <string name="settings_language">LANGUAGE</string>
    <string name="settings_brightness">BRIGHTNESS</string>
    <string name="settings_notifications">NOTIFICATIONS</string>
    <string name="language_1">English</string>
    <string name="language_2">Portuguese</string>

    <!-- Log out -->
    <string name="question_logout">Are you sure you want to log out?</string>

    <!-- Question / Answer -->
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="select_language">Select a Language</string>
</resources>
