<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/main_menu_accommodations">
        <menu>
            <item
                android:id="@+id/nav_all_accommodations"
                android:icon="@drawable/ic_menu_house"
                android:title="@string/main_menu_all_accommodations" />
        </menu>
    </item>

    <item android:title="@string/main_menu_app">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/main_menu_settings" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_menu_log_out"
                android:title="@string/main_menu_log_out" />
        </menu>
    </item>
</menu>
